--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
 			<dependency>
 				<groupId>org.ta4j</groupId>
 				<artifactId>ta4j-core</artifactId>
-				<version>0.16-SNAPSHOT</version>
+				<version>0.17</version>
 			</dependency>
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
